--- a/stock-api-service/.env.example
+++ b/stock-api-service/.env.example
@@ -1,3 +1,14 @@
-STOCK_API_BASE_URL=https://api.example.com/stock
-STOCK_API_AUTH_TOKEN=b20iLCJleHAiOjE3
-SERVER_PORT=8080
+# Puerto del servidor
+SERVER_PORT=8000
+
+# Configuración de la API de stocks
+STOCK_API_BASE_URL=https://api.example.com/v1/stocks
+STOCK_API_AUTH_TOKEN=Token
+
+# Configuración de la base de datos
+DB_HOST=localhost
+DB_PORT=26257
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=stockdb
+DB_SSL_MODE=disable
